--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -3,7 +3,9 @@
     <a class="navbar-brand" href="/">F8 education</a>
     <a href="/courses?page=1">Khóa học</a>
     <a href="/login">ĐĂNG NHẬP</a>
-    <a href="/sign-up">ĐĂNG KÝ</a>
+    <a href="/register">ĐĂNG KÝ</a>
+    <a href="/logout">dang xuat</a>
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
