--- a/src/resources/views/log-in.hbs
+++ b/src/resources/views/log-in.hbs
@@ -1,23 +1,35 @@
-<form action="/login" method="post">
-    {{#ifCond wrongAcc '==' true}}
-    <div class="alert alert-danger" role="alert">
-    tai khoan hoac mat khau sai
+<form class="row g-3" action="/login" method="post">
+  <div class="col-md-4">
+    <label for="Username" class="form-label">Username</label>
+    <input type="text" class="form-control {{#ifCond username '==' 0}} is-invalid {{/ifCond}} {{#ifCond wrongUsername '==' true}} is-invalid {{/ifCond}}" id="Username" name="username" {{#ifCond username '!=' 0}} value="{{../username}}" {{/ifCond}}>
+    {{#ifCond username '==' 0}}
+    <div class="invalid-feedback">
+      ban chua nhap ten dang nhap.
     </div>
     {{/ifCond}}
-    <input type="text" class="form-control {{#ifCond loginUsername '==' 0}} is-invalid {{/ifCond}} {{#ifCond wrongAcc '==' true}} is-invalid {{/ifCond}}" id="floatingInput" placeholder="name" name="username" {{#ifCond loginUsername '!=' 0}} value="{{../loginUsername}}" {{/ifCond}}>
-    <label for="floatingInput">name</label>
-    {{#ifCond loginUsername '==' 0}}
-    <div class="alert alert-danger" role="alert">
-    ban chua nhap tai khoan
+    {{#ifCond wrongUsername '==' true}}
+    <div class="invalid-feedback">
+      ten dang nhap ko chinh xac.
     </div>
     {{/ifCond}}
+  </div>
     
-    <input type="password" class="form-control {{#ifCond loginPassword '==' 0}} is-invalid {{/ifCond}} {{#ifCond wrongAcc '==' true}} is-invalid {{/ifCond}}" id="floatingPassword" placeholder="password" name="password" {{#ifCond loginPassword '!=' 0}} value="{{../loginPassword}}" {{/ifCond}}>
-    <label for="floatingPassword">password</label>
-    {{#ifCond loginPassword '==' 0}}
-    <div class="alert alert-danger" role="alert">
-    ban chua nhap mat khau
+  <div class="col-md-4">
+    <label for="Password" class="form-label">Password</label>
+    <input type="password" class="form-control {{#ifCond password '==' 0}} is-invalid {{/ifCond}} {{#ifCond wrongPassword '==' true}} is-invalid {{/ifCond}}" id="Password" name="password" {{#ifCond password '!=' 0}} value="{{../password}}" {{/ifCond}}>
+    {{#ifCond password '==' 0}}
+    <div class="invalid-feedback">
+      ban chua nhap mat khau.
     </div>
     {{/ifCond}}
-    <button type="submit" class="btn btn-primary">dang nhap</button>
+    {{#ifCond wrongPassword '==' true}}
+    <div class="invalid-feedback">
+      mat khau ko chinh xac.
+    </div>
+    {{/ifCond}}
+  </div>
+    
+  <div class="col-12">
+    <button class="btn btn-primary" type="submit">dang nhap</button>
+  </div>
 </form>
