--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,11 +1,15 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
     <a class="navbar-brand" href="/">F8 education</a>
+    
+    
+    
+    {{#if loggedIn}}
     <a href="/courses?page=1">Khóa học</a>
+    {{else}}
     <a href="/login">ĐĂNG NHẬP</a>
     <a href="/register">ĐĂNG KÝ</a>
-    <a href="/logout">dang xuat</a>
-
+    {{/if}}
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -19,11 +23,16 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="/courses/create">Đăng khóa học</a>
+            {{#ifCond admin '===' true}}
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/me/stored/courses">Khóa học của tôi</a>
-            <a class="dropdown-item" href="/me/stored/news">Bài viết của tôi</a>
+            <a class="dropdown-item" href="/admin/users">xem tat ca ng dung</a>
+            
+            {{/ifCond}}
+            {{#if loggedIn}}
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Đăng xuất</a>
+            <a class="dropdown-item" href="/logout">Đăng xuất</a>
+            {{/if}}
           </div>
         </li>
       </ul>
