--- a/src/resources/views/stored-comics.hbs
+++ b/src/resources/views/stored-comics.hbs
@@ -1,7 +1,7 @@
-<form name="container-form" class="mt-4" method="POST" action="/courses/handle-form-action">
+<form name="container-form" class="mt-4" method="POST" action="/admin/comics/handle-form-action">
   <div>
     <h3>Khóa học của tôi</h3>
-    <a href="/me/trash/courses">Thùng rác ({{deletedCount}})</a>
+    <a href="/admin/trashedComics">Thùng rác ({{deletedCount}})</a>
   </div>
 
   <div class="mt-4 d-flex align-items-center">
@@ -27,11 +27,11 @@
       </tr>
     </thead>
     <tbody>
-      {{#each courses}}
+      {{#each comics}}
       <tr>
         <td>
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="courseIds[]" value="{{this._id}}">
+            <input class="form-check-input" type="checkbox" name="comicIds[]" value="{{this._id}}">
           </div>
         </td>
         <th scope="row">{{sum @index 1}}</th>
@@ -39,16 +39,16 @@
         <td>{{this.level}}</td>
         <td>{{this.createdAt}}</td>
         <td>
-          <a href="/courses/{{this._id}}/edit" class="btn btn-link">Sửa</a>
+          <a href="/comic/{{this._id}}/edit" class="btn btn-link">Sửa</a>
           <a href="" class="btn btn-link" data-toggle="modal" data-id="{{this._id}}"
-            data-target="#delete-course-modal">Xóa</a>
+            data-target="#delete-comic-modal">Xóa</a>
         </td>
       </tr>
       {{else}}
       <tr>
         <td colspan="5" class="text-center">
           Bạn chưa đăng khóa học nào.
-          <a href="/courses/create">Đăng khóa học</a>
+          <a href="/comic/create">Đăng khóa học</a>
         </td>
       </tr>
       {{/each}}
@@ -57,7 +57,7 @@
 </form>
 
 {{!-- Confirm delete course --}}
-<div id="delete-course-modal" class="modal" tabindex="-1" role="dialog">
+<div id="delete-comic-modal" class="modal" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -71,32 +71,32 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Hủy</button>
-        <button id="btn-delete-course" type="button" class="btn btn-danger">Xóa bỏ</button>
+        <button id="btn-delete-comic" type="button" class="btn btn-danger">Xóa bỏ</button>
       </div>
     </div>
   </div>
 </div>
 
 {{!-- Delete hidden form --}}
-<form name="delete-course-form" method="POST"></form>
+<form name="delete-comic-form" method="POST"></form>
 
 <script>
   document.addEventListener('DOMContentLoaded', function () { // cai nay la sau khi domcontentloaded co nghia la sau khi jquery loaded thi moi chay
-    var courseId;
-    var deleteForm = document.forms['delete-course-form'];
-    var btnDeleteCourse = document.getElementById('btn-delete-course');
+    var comicId;
+    var deleteForm = document.forms['delete-comic-form'];
+    var btnDeleteComic = document.getElementById('btn-delete-comic');
     var checkboxAll = $('#checkbox-all');
-    var courseItemCheckbox = $('input[name="courseIds[]"]');
+    var comicItemCheckbox = $('input[name="comicIds[]"]');
     var checkAllSubmitBtn = $('.check-all-submit-btn');
     // When dialog confirm clicked
-    $('#delete-course-modal').on('show.bs.modal', function (event) {
+    $('#delete-comic-modal').on('show.bs.modal', function (event) {
       var button = $(event.relatedTarget);
-      courseId = button.data('id');
+      comicId = button.data('id');
     });
 
     // When delete course btn clicked
-    btnDeleteCourse.onclick = function () {
-      deleteForm.action = '/courses/' + courseId + '?_method=DELETE';
+    btnDeleteComic.onclick = function () {
+      deleteForm.action = '/comic/' + comicId + '?_method=DELETE';
       deleteForm.submit();
     };
    
@@ -104,20 +104,20 @@
     checkboxAll.change( function () {
       var isCheckedAll = $(this).prop('checked');
       
-      courseItemCheckbox.prop('checked', isCheckedAll)
+      comicItemCheckbox.prop('checked', isCheckedAll)
       renderCheckAllSubmitBtn();
     });
 
     //small checkbox changed
-    courseItemCheckbox.change( function () {
-      var isCheckedAll = courseItemCheckbox.length === $('input[name="courseIds[]"]:checked').length;
+    comicItemCheckbox.change( function () {
+      var isCheckedAll = comicItemCheckbox.length === $('input[name="comicIds[]"]:checked').length;
       checkboxAll.prop('checked',isCheckedAll)
       renderCheckAllSubmitBtn();
     });
     
     // re-render checkallsubmitbtn
     function renderCheckAllSubmitBtn(){
-      var checkCount = $('input[name="courseIds[]"]:checked').length;
+      var checkCount = $('input[name="comicIds[]"]:checked').length;
       if(checkCount > 0){
         checkAllSubmitBtn.attr('disabled',false)
       }else{
