--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -5,7 +5,7 @@
     
     
     {{#if loggedIn}}
-    <a href="/courses?page=1">Khóa học</a>
+    <a href="/comic?page=1">Khóa học</a>
     {{else}}
     <a href="/login">ĐĂNG NHẬP</a>
     <a href="/register">ĐĂNG KÝ</a>
@@ -22,10 +22,10 @@
             Sơn Đặng
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/courses/create">Đăng khóa học</a>
+            <a class="dropdown-item" href="/comic/create">Đăng khóa học</a>
             {{#ifCond admin '===' true}}
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="/me/stored/courses">Khóa học của tôi</a>
+            <a class="dropdown-item" href="/admin/storedComics">Khóa học của tôi</a>
             <a class="dropdown-item" href="/admin/users">xem tat ca ng dung</a>
             
             {{/ifCond}}
